Fix ability for content to overflow on mobile

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -5,6 +5,7 @@
     flex-direction: column;
 
     min-height: 100%;
+    width: 100%;
 }
 
 .page-hero {
